syntax = "proto3";
option java_package = "ir.ms.pb";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;
option go_package = "x";

// gid = unique nano second time;
// sid = scoped id; for future - bot platforms
// cid = common id - seqentaily increase id for user, channels, groups, shops,..

message Message {

}

enum ChannelType {
  CHANNEL_UNKNOWN = 0;
  CHANNEL_PRIMARY = 1;
  CHANNEL_NORMAL = 2;
  CHANNEL_SAVES = 3;
  CHANNEL_STORE = 4;
}

enum ChannelAccessibility {
  CHANNEL_UNKNOWN_AB = 0;
  CHANNEL_OPEN = 1;
  CHANNEL_PRIVATE_LINK = 2;
  CHANNEL_CREATOR = 3;
}

message ChannelPrivacySetting {
  uint32 online_privacy = 10;
  uint32 call_privacy = 11;
  uint32 add_to_group_privacy = 12;
  uint32 seen_message_privacy = 13;
}

message ChannelNotificationSetting {
  uint32 user_cid = 1;
  bool social_led_on = 2;
  string social_led_color = 3;
  bool request_to_follow_you = 4;
  bool followed_channel = 5;
  bool accepted_channel_follow_request = 6;
  bool channel_message_liked = 7;
  bool channel_message_commented = 8;
  bool mentioned_channel_in_message = 9;
  bool mentioned_channel_in_comment = 10;
  bool contacts_joined = 11;
  bool direct_message = 12;
  bool direct_alert = 13;
  bool direct_preview = 14;
  bool direct_led_on = 15;
  bool direct_led_color = 16;
  bool direct_vibrate = 17;
  bool direct_popup = 18;
  bool direct_sound = 19;
  bool direct_priority = 20;
}

message Channel {
  uint32 cid = 1;
  string user_name = 2;
  string first_name = 4; // title
  string last_name = 5;
//  string channel_title = 3;
  uint32 creator_user_cid = 7;
  uint32 is_verified = 6;
  int64 avatar_count = 40;
  //  uint32 access_hash = 8;
  string about = 16;
  string invite_link_hash = 17;
  uint32 post_seq = 19;
//  uint32 last_post_time = 35;
  fixed64 sort_time = 20;
  fixed64 sync_time = 21;
  uint32 created_time = 36;
  uint32 is_deleted = 38;
  uint32 is_banned = 39;

  ChannelAccessibility accessibility = 9;
  ChannelType channel_type = 42;
  ChannelCounts counts = 41;
  Message last_message = 25;
  Message pinned_message = 26;
  Message avatar = 100;
}

message ChannelCounts {
  uint32 followers_count = 20;
  uint32 following_count = 21;
  uint32 posts_count = 22;
  uint32 media_count = 23;
  uint32 photo_count = 24;
  uint32 video_count = 25;
  uint32 gif_count = 26;
  uint32 audio_count = 27;
  uint32 voice_count = 28;
  uint32 file_count = 29;
  uint32 link_count = 30;
  uint32 board_count = 31;
  uint32 pined_count = 32;
  uint32 likes_count = 33;
  uint32 reshared_count = 34;
}

// Shared common cid
enum Cast {
  UNKNOWN = 0;
  USER = 1 ;
  CHANNEL = 2 ;
  GROUP = 3 ;
  BOT = 4;
  STORE = 6;
  //should be ??
  TAG = 7;
}

//
message Action {
  fixed64 gid = 1;
  uint32 actor_user_cid = 2;
  uint32 action_type = 3; // todo to enum
  uint32 peer_user_cid = 4;
  fixed64 channel_cid = 9;
  fixed64 message_id = 5; //post
  fixed64 comment_id = 6;
  int64 hash_murm64 = 7; //Murmur
  uint32 created_time = 8;
}

message Blocked {
  fixed64 gid = 1;
  uint32 user_cid = 2;
  uint32 blocked_user_cid = 6; // real active
  uint32 blocked_channel_cid = 7; // for show to blocker
  uint32 created_time = 5;
}

message Comment { // just by channels for now
  fixed64 gid = 1;
  uint32 channel_cid = 9;
  uint32 by_cast_cid = 2; // user channel store - now just channel
  Cast cast_type = 8;
  fixed64 message_gid = 3; // post
  string text = 4;
  uint32 likes_count = 5;
  uint32 edit_time = 6;
  uint32 created_time = 7;
}

message Followed { // just by channels
  fixed64 gid = 1;
  uint32 channel_cid = 2;
  uint32 target_cid = 3;
  Cast cast_type = 8;
  uint32 created_time = 4;
}

enum ReactionType {
  NONE = 0;
  LIKE = 1;
}

message Reaction { // like is reserved in RDMS(mysql)
  fixed64 gid = 1;
  int64 message_cid = 2;
  uint32 by_cast_cid = 3;
  Cast cast_type = 8;
//  uint32 message_type = 4;
  uint32 created_time = 5;
}

message Contact {
  fixed64 gid = 1;
  uint32 user_cid = 2;
  int64 client_id = 3;
  string phone = 4;
  string first_name = 5;
  string last_name = 6;
}

message Post {
  fixed64 gid = 1;
  uint32 user_cid = 2;
  uint32 post_type = 3;
  int64 media_id = 4;
  int64 file_ref_id = 5;
  string post_key = 6;
  string text = 7;
  string rich_text = 8;
  uint32 media_count = 9;
  uint32 shared_to = 10;
  uint32 disable_comment = 11;
  uint32 via = 12;
  uint32 seq = 13;
  uint32 comments_count = 14;
  uint32 likes_count = 15;
  uint32 views_count = 16;
  uint32 edited_time = 17;
  uint32 created_time = 18;
}

message PostCount {
  fixed64 post_gid = 1;
  uint32 comments_count = 2;
  uint32 likes_count = 3;
  int64 views_count = 4;
  uint32 re_shared_count = 5;
  uint32 chat_shared_count = 6;
}

enum SessionPlatform {
  UNKNOWN_PLATFORM = 0;
  ANDROID = 1;
  IOS = 2;
  MAC_OS = 3;
  WINDOWS = 4;
  LINUX = 5;
  BLACK_BERRY = 6;
  Web = 7;
}

message Session {
  fixed64 gid = 1;
  string session_uuid = 2;
  uint32 user_cid = 3;
  string last_ip_address = 4;
  string user_agent = 8;
  SessionPlatform platform = 9;
  uint32 app_version = 5;
  uint32 active_time = 6;
  uint32 created_time = 7;
}


message Sms {
  fixed64 gid = 1;
  string hash = 2;
  string app_uuid = 3;
  string client_phone = 4;
  uint32 genrated_code = 5;
  string sms_sender_number = 6;
  string sms_send_statues = 7;
  string sms_http_body = 8;
  string err = 9;
  string carrier = 10;
  bytes country = 11;
  uint32 is_valid_phone = 12;
  uint32 is_confirmed = 13;
  uint32 is_login = 14;
  uint32 is_register = 15;
  uint32 retried_count = 16;
  uint32 ttl = 17;
}

message Tag {
  fixed64 gid = 1;
  string name = 2;
  uint32 count = 3;
  uint32 tag_status_enum = 4;
  uint32 is_blocked = 5;
  uint32 group_id = 6;
  uint32 created_time = 7;
}

message User {
  uint32 cid = 1;
//  string user_name = 2;
//  string user_name_lower = 3;
//  string first_name = 4;
//  string last_name = 5;
//  uint32 is_verified = 6;
//  int64 avatar_id = 7;
//  uint32 access_hash = 8;
//  uint32 profile_privacy = 9;
//  uint32 online_privacy = 10;
//  uint32 call_privacy = 11;
//  uint32 add_to_group_privacy = 12;
//  uint32 seen_message_privacy = 13;
  string phone = 14;
  string email = 15;
//  string about = 16;
  string password_hash = 17;
  string password_salt = 18;
//  uint32 post_seq = 19;
//  uint32 last_post_time = 35;
  uint32 created_time = 36;
  uint32 version_time = 37;
  uint32 is_deleted = 38;
  uint32 is_banned = 39;

  Channel primary_channel = 100;
  repeated Channel channels = 101;
  repeated Session sessions = 102;
//  repeated Chat chats = 103;
//  repeated Contact contacts= 103;

}

message UserCounts {
  uint32 created_channels = 1;

}

message UserRelation {
  int64 rel_nano_id = 1;
  uint32 user_cid = 2;
  uint32 peer_user_id = 3;
  uint32 follwing = 4;
  uint32 followed = 5;
  uint32 in_contacts = 6;
  uint32 mutual_contact = 7;
  uint32 is_favorite = 8;
  uint32 notify = 9;
}

message MessageDraft {
  string draft_text = 34;
  int64 drat_reply_to_msg_id = 35;
}

message ChatCustomNotification {
  bool alert = 13;
  bool preview = 14;
  bool led_on = 15;
  bool led_color = 16;
  bool vibrate = 17;
  bool popup = 18;
  bool sound = 19;
  bool priority = 20;
}

message Chat {
  fixed64 gid = 1;
//  string chat_key = 2;
//  string room_key = 3;
//  uint32 room_type = 4;
  uint32 user_cid = 5;
  uint32 channel_cid = 40;
  uint32 peer_user_cid = 6;
  uint32 peer_channel_cid = 41;
  uint32 group_cid = 7;
//  int64 hash_tag_id = 8;
  string custom_title = 9;
  fixed64 pin_time_ms = 10;
  int64 from_msg_gid = 11;
  uint32 unseen_count = 12;
  uint32 seq = 13;
//  int64 last_msg_id = 14;
//  uint32 last_my_msg_status = 15;
  uint32 my_last_seen_seq = 16;
  int64 my_last_seen_msg_id = 17;
  int64 peer_last_seen_msg_id = 18;
  uint32 my_last_delivered_seq = 19;
  int64 my_last_delivered_msg_id = 20;
  int64 peer_last_delivered_msg_id = 21;
  bool is_active = 22;
//  bool is_left = 23;
//  bool is_creator = 24;
//  bool is_kicked = 25;
//  bool is_admin = 26;
//  bool is_deactivated = 27;
//  bool is_muted = 28;
  uint32 mute_until = 29;
  int64 sort_time_ms = 30;
//  uint32 version_seq = 31;
//  uint32 order_time = 32;
  uint32 created_time = 33;

  fixed64 sort_time = 45;

  Channel channel = 48;
  Contact contact = 49;
  Group group = 50;
  Message last_message = 25;
  Message pinned_message = 26;
  FileMsg avatar = 44;
  GroupMember group_member = 43;
  MessageDraft draft = 46;
  ChatCustomNotification custom_notification = 47;
}

enum GroupPrivacy {
  UNKNOWN_GP = 0;
  OPEN = 1; // via username
  PRIVATE_LINK = 2;
}

message Group {
  uint32 cid = 1;
  string group_title = 3;
  string user_name = 4;
  uint32 creator_user_cid = 7;
  uint32 creator_channel_cid = 31;
  GroupPrivacy group_privacy = 8;
  bool history_viewable = 9;
  uint32 seq = 10;
  uint32 avatar_count = 14;
  string about = 15;
  string invite_link_hash = 16;
  uint32 members_count = 17;
  uint32 admins_count = 18;
  uint32 moderator_counts = 19;
  fixed64 sort_time = 20;
  fixed64 sync_time = 40;
  uint32 created_time = 21;
  bool is_deleted = 23;
  bool is_banned = 24;
  Message last_message = 25;
  Message pinned_message = 26;
  FileMsg avatar = 27;
}

enum GroupMemberRole {
  Unknown = 0;
  CREATOR = 1;
  NORMAL_USER = 2;
  MODERATOR = 3;
}

message GroupMember {
  int64 gid = 1;
  int64 group_cid = 2;
  uint32 user_cid = 3;
  uint32 channel_cid = 8;
  uint32 by_user_cid = 4;
  uint32 by_channel_cid = 7;
  GroupMemberRole group_role = 5;
  uint32 created_time = 6;
}

message FileMsg {
  fixed64 gid = 1;
  uint32 access_hash = 2;
  uint32 file_type = 3;
  uint32 width = 4;
  uint32 height = 5;
  string extension = 6;
  uint32 user_cid = 7;
  bytes data_thumb = 8;
  bytes data = 9;
}